# ufo-data

./: .gitattributes  2018090200_sonde.nc4.after  2018090200_sonde.nc4.after.no.nobs  2018090200_sonde.nc4.before  CMakeLists.txt  PStar.nc4  rename_model_names.py  sondes_obs_2018090112.nc4  sondes_q_geoval_2020121500_m.nc4  sondes_q_hofx_2020121500_m.nc4  surface_obs_2018090112.nc4  update_jac_part6.py  update_part2.py  update_part6.py
CI/: CMakeLists.txt  CMakelists.txt  buildspec_clang.yml
CI/cmake/: CTestConfig.cmake  CTestCustom.ctest.in
testinput_tier_1/: 2020100106_metars_small.nc  20220216T00Z_PT1H_amsr2_ufo_sample.nc4  Jason-2-2018-04-15.nc  Jason-2-2018-04-15_geovals.nc  PStar_geovals_20210521T1200Z.nc4  PStar_obs_20210521T1200Z.nc4  PStar_obs_20210521T1200Z_noflag.nc4  QFEtoQNH_obs_20210521T1200Z.nc4  RadToBT_obs_2021071200.nc4  Rcov_iasi_metop-b_sea.nc4  Surface_geovals_20210701T1200Z.nc4  Surface_metadata.csv  Surface_obs_20210701T1200Z.nc4  T2potentialT_conversion_aircraft.nc4  abi_g16_geoval_2018041500_m_qc.nc4  abi_g16_geoval_2019042306_m.nc4  abi_g16_geoval_2019042306_s.nc4  abi_g16_geovals_gfs_2022021503_small.nc4  abi_g16_geovals_gfs_2022021600.nc4  abi_g16_obs_2018041500_m_qc.nc4  abi_g16_obs_2019042306_m.nc4  abi_g16_obs_2019042306_s.nc4  abi_g16_obsdiag_2018041500_m_qc.nc4  abi_g16_rf_64km.20220215T180000Z_small.nc4  ahi_himawari8_geoval_2019042306_m.nc4  ahi_himawari8_geoval_2019042306_s.nc4  ahi_himawari8_obs_2019042306_m.nc4  ahi_himawari8_obs_2019042306_s.nc4  aircraftBCOffline_ascent.csv  aircraftBCOffline_ascentSquared.csv  aircraftBCOffline_constant.csv  aircraftBCOffline_geoval.nc4  aircraftBCOffline_obs.nc4  aircraft_artificial_bias.nc4  aircraft_artificial_bias_1var.nc4  aircraft_artificial_bias_2.nc4  aircraft_background_error_vert_interp_air_pressure_geoval_2018041500_s.nc4  aircraft_background_error_vert_interp_air_pressure_obsdiag_2018041500_s.nc4  aircraft_background_error_vert_interp_height_geoval_2018041500_s.nc4  aircraft_background_error_vert_interp_height_obsdiag_2018041500_s.nc4  (+794 more)
testinput_tier_1/instruments/conventional/: 2020100106_metars_small.nc  aircraft_abias_air_ascent.2021121115.csv  aircraft_abias_air_ascentSquared.2021121115.csv  aircraft_abias_air_constant.2021121115.csv  aircraft_geoval_2020110112_m.nc4  aircraft_geoval_2020121500_m.nc  aircraft_geoval_2020121500_s.nc  aircraft_geovals_2021121200_m.nc4  aircraft_obs_2020110112_m.nc4  aircraft_obs_2020121500_m.nc  aircraft_obs_2020121500_s.nc  aircraft_obs_2021121200_m.nc4  buoy_wmo_multi.nc  geos_sfcship_geoval_2020121500.nc4  geos_sfcship_obs_2020121500.nc4  geos_sondes_geoval_2020121500.nc4  geos_sondes_obs_2020121500.nc4  ompsnp_npp_geoval_2020121500.nc  ompsnp_npp_obs_2020121500.nc  ompsnp_npp_obs_2020121500.nc4  pibal_geoval_2021121200_m.nc4  pibal_geovals_2021121200_m.nc4  pibal_obs_2021121200_m.nc4  rass_geoval_2020110112_m.nc4  rass_obs_2020110112_m.nc4  rass_tv_geoval_2020121500.nc  rass_tv_obs_2020121500.nc  satwind_geoval_2020110112_m.nc4  satwind_geoval_2020121500_m.nc  satwind_geoval_2020121500_s.nc  satwind_geovals_2021121200_m.nc4  satwind_obs_2020110112_m.nc4  satwind_obs_2020121500_m.nc  satwind_obs_2020121500_s.nc  satwind_obs_2021121200_m.nc4  scatwind_geoval_2020110112_m.nc4  scatwind_geoval_2020121500_m.nc  scatwind_geoval_2020121500_s.nc  scatwind_geovals_2021121200_m.nc4  scatwind_obs_2020110112_m.nc4  (+38 more)
testinput_tier_1/instruments/radiance/: abi_g16_geoval_2021051700.nc4  abi_g16_geoval_2021051700_m.nc4  abi_g16_obs_2021051700.nc4  abi_g16_obs_2021051700_m.nc4  abi_g16_tlapmean.txt  airs_aqua_geoval_2020110112_m.nc4  airs_aqua_obs_2020110112_m.nc4  airs_aqua_tlapmean.txt  amsua_aqua_geoval_2020110112_m.nc4  amsua_aqua_obs_2020110112_m.nc4  amsua_aqua_tlapmean.txt  amsua_metop-a_geoval_2020110112_m.nc4  amsua_metop-a_obs_2020110112_m.nc4  amsua_metop-a_tlapmean.txt  amsua_metop-b_geoval_2020110112_m.nc4  amsua_metop-b_obs_2020110112_m.nc4  amsua_metop-b_tlapmean.txt  amsua_metop-c_geoval_2020110112_m.nc4  amsua_metop-c_obs_2020110112_m.nc4  amsua_metop-c_tlapmean.txt  amsua_n15_geoval_2020110112_m.nc4  amsua_n15_obs_2020110112_m.nc4  amsua_n15_tlapmean.txt  amsua_n18_geoval_2020110112_m.nc4  amsua_n18_obs_2020110112_m.nc4  amsua_n18_tlapmean.txt  amsua_n19_geoval_2020110112_m.nc4  amsua_n19_obs_2020110112_m.nc4  amsua_n19_tlapmean.txt  atms_n20_geoval_2020110112_m.nc4  atms_n20_obs_2020110112_m.nc4  atms_n20_tlapmean.txt  atms_npp_geoval_2020110112_m.nc4  atms_npp_obs_2020110112_m.nc4  atms_npp_tlapmean.txt  avhrr_metop-a_geoval_2020110112_m.nc4  avhrr_metop-a_obs_2020110112_m.nc4  avhrr_metop-a_obsdiag_2020110112_m.nc4  avhrr_metop-a_tlapmean.txt  avhrr_n18_geoval_2020110112_m.nc4  (+58 more)
testinput_tier_1/instruments/radiance/data_inter/: abi_g16_geoval_2021051700_m.nc4  abi_g16_obs_2021051700_m.nc4  airs_aqua_geoval_2020110112_m.nc4  airs_aqua_obs_2020110112_m.nc4  amsua_aqua_geoval_2020110112_m.nc4  amsua_aqua_obs_2020110112_m.nc4  amsua_metop-a_geoval_2020110112_m.nc4  amsua_metop-a_obs_2020110112_m.nc4  amsua_metop-b_geoval_2020110112_m.nc4  amsua_metop-b_obs_2020110112_m.nc4  amsua_metop-c_geoval_2020110112_m.nc4  amsua_metop-c_obs_2020110112_m.nc4  amsua_n15_geoval_2020110112_m.nc4  amsua_n15_obs_2020110112_m.nc4  amsua_n18_geoval_2020110112_m.nc4  amsua_n18_obs_2020110112_m.nc4  amsua_n19_geoval_2020110112_m.nc4  amsua_n19_obs_2020110112_m.nc4  atms_n20_geoval_2020110112_m.nc4  atms_n20_obs_2020110112_m.nc4  atms_npp_geoval_2020110112_m.nc4  atms_npp_obs_2020110112_m.nc4  avhrr_metop-a_geoval_2020110112_m.nc4  avhrr_metop-a_obs_2020110112_m.nc4  avhrr_metop-a_obsdiag_2020110112_m.nc4  avhrr_n18_geoval_2020110112_m.nc4  avhrr_n18_obs_2020110112_m.nc4  (+46 more)
testinput_tier_2/instruments/conventional/: aircraft_geoval_2020121500.nc  aircraft_obs_2020121500.nc  satwind_geoval_2020121500.nc  satwind_obs_2020121500.nc  scatwind_geoval_2020121500.nc  scatwind_obs_2020121500.nc  sfc_geoval_2020121500.nc  sfc_obs_2020121500.nc  sfcship_geoval_2020121500.nc  sfcship_obs_2020121500.nc  sondes_geoval_2020121500.nc  sondes_obs_2020121500.nc
(+19 files in other folders)
